[package]
name = "alloc-shim"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.3.4"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "A shim crate for to import items of alloc crate ergonomically."
repository = "https://github.com/taiki-e/alloc-shim"
documentation = "https://docs.rs/alloc-shim/"
readme = "README.md"

[badges]
maintenance = { status = "deprecated" }

[lib]
name = "alloc"

[features]
std = []
alloc = []

[package.metadata.docs.rs]
features = ["alloc"]
