[package]
name = "alloc-shim2"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
alloc-shim = { path = "../..", version = "0.1", optional = true }

[features]
std = ["alloc", "alloc-shim/std"]
alloc = ["alloc-shim"]

default = ["alloc"]
